--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.13",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
@@ -17,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.29.0",
     "react-native-svg": "12.1.1"
   },
   "devDependencies": {
